fdo#78471: Don't forget to record the ID of the last record for BIFF5.

Shared formula import code depends on this.

Change-Id: Iecb009252c56673df33e0d681de825911154903a